--- a/catalog/view/theme/default/template/account/newsletter.twig
+++ b/catalog/view/theme/default/template/account/newsletter.twig
@@ -1,15 +1,6 @@
 {{ header }}
-<div id="account-newsletter" class="container">
-  {{ include(helper.template('_partial/breadcrumb')) }}
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
+{{ column_left }}
+    <div id="content" class="{{ class }} col-sm-9">{{ content_top }}
       <h1>{{ heading_title }}</h1>
       <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
         <fieldset>
@@ -35,13 +26,17 @@
           </div>
         </fieldset>
         <div class="buttons clearfix">
-          <div class="pull-right">
+          <div class="pull-right" style="margin-right: 55%">
             <input type="submit" value="{{ button_submit }}" class="btn btn-primary" />
           </div>
           <div class="pull-left"><a href="{{ back }}" class="btn btn-default">{{ button_back }}</a></div>
         </div>
       </form>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
+      {{ content_bottom }}</div></div>
 </div>
 {{ footer }}
+<script>
+    $(function () {
+        $('.j-member-newsletter').addClass('area');
+    });
+</script>
