--- a/catalog/view/theme/default/template/account/order_list.twig
+++ b/catalog/view/theme/default/template/account/order_list.twig
@@ -64,6 +64,10 @@
         {% endfor %}
         </tbody>
       </table>
+      <div class="row">
+        <div class="col-sm-6 text-left">{{ pagination }}</div>
+        <div class="col-sm-6 text-right">{{ results }}</div>
+      </div>
       {#<div id="toolbar_page" style="display: block;">#}
         {#<div id="box-pagelist">#}
           {#<div class="pageNav ">#}
