--- a/catalog/view/theme/default/template/account/reward.twig
+++ b/catalog/view/theme/default/template/account/reward.twig
@@ -78,3 +78,9 @@
 </body>
 </html>
 {{ footer }}
+
+<script>
+    $(function () {
+        $('.j-member-reward').addClass('area');
+    });
+</script>
