--- a/catalog/view/theme/default/template/common/column_left.twig
+++ b/catalog/view/theme/default/template/common/column_left.twig
@@ -10,6 +10,7 @@
         <ul>
             <li> <a class="j-member-edit" href="index.php?route=account/edit">Account Setting </a> </li>
             <li> <a class="j-member-orders" href="index.php?route=account/order">My Orders</a> </li>
+            <li> <a class="j-member-return" href="index.php?route=account/return">My Return</a> </li>
             <li> <a class="ga-tk-list-my-tickets j-member-ticket " href=""> My Tickets <span id="ticket_menu_num" class="red_num"></span> </a> </li>
             <li> <a class=" j-member-payment" href=""> My Payment Options </a> </li>
             <li> <a class=" j-member-wallet" href="index.php?route=account/transaction"> My Wallet </a> </li>
@@ -20,7 +21,8 @@
             <li> <a class=" j-member-styleGallery" href=""> Style Gallery </a> </li>
             <li> <a class=" j-member-report" href=""> Free Trial Report </a> </li>
             <li> <a class=" j-member-wishlist" href="index.php?route=account/wishlist"> My Wishlist </a> </li>
-            <li> <a class=" j-member-point" href=""> Bonus Point Program </a> </li>
+            <li> <a class=" j-member-reward" href="index.php?route=account/reward"> Reward </a> </li>
+            <li> <a class=" j-member-newsletter" href="index.php?route=account/newsletter"> newsletter </a> </li>
             <li class="log_off_left"> <a class="j-member-signout" href="index.php?route=account/logout"> Sign out </a> </li>
         </ul>
     </nav>
