--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -7,6 +7,8 @@
       var seckill_arr = [];
       var js_site_from = 'www';
   </script>
+  <link href="catalog/view/theme/default/stylesheet/stylesheet.css" rel="stylesheet">
+  <link href="catalog/view/javascript/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
   <link media="all" href="catalog/view/theme/default/css/index.css" type="text/css" rel="stylesheet" />
   <link media="all" href="catalog/view/theme/default/css/home.css" type="text/css" rel="stylesheet" />
@@ -21,6 +23,7 @@
   <link media="all" href="catalog/view/theme/default/css/password.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/myorder.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/address.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/reward.css" type="text/css" rel="stylesheet">
   
   <link media="all" href="catalog/view/theme/default/css/wishlist.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/transation.css" type="text/css" rel="stylesheet">
