--- a/catalog/view/theme/default/template/account/address_form.twig
+++ b/catalog/view/theme/default/template/account/address_form.twig
@@ -269,7 +269,7 @@
         </div>
       </form>
       {{ content_bottom }}</div>
-    {{ column_right }}</div>
+    {#{{ column_right }}</div>#}
 </div>
 <script type="text/javascript"><!--
 // Sort the custom fields
