--- a/catalog/view/theme/default/template/account/edit.twig
+++ b/catalog/view/theme/default/template/account/edit.twig
@@ -1,7 +1,7 @@
 {{ header }}
    {{ column_left }}
     <div class="she-center col-sm-9 col-xs-12 per-setting">
-      <h3 class="she-tl-h3">Account Setting</h3>
+      <h3 class="she-tl-h3">{{ heading_title }}</h3>
       <div class="info-line_sucess" id="info-line_sucessid1" style="display: none;">
         <p class="info-line_sucess_font pa"><em class="pic_warm"></em>We only resend three times per day, please verify tomorrow.</p>
         <div class="info-line_sucess_left">
