--- a/catalog/view/theme/default/template/account/password.twig
+++ b/catalog/view/theme/default/template/account/password.twig
@@ -2,7 +2,7 @@
       {{ column_left }}
     <div class="she-center col-sm-9 col-xs-12 per-setting">
 
-      <h3 class="she-tl-h3">Edit Password</h3>
+      <h3 class="she-tl-h3">{{ heading_title }}</h3>
 
       <div class="she-center-editpass">
         <form class="formlist list-input" action="{{ action }}" method="post" enctype="multipart/form-data" method="post">
