--- a/catalog/view/theme/default/template/account/return_list.twig
+++ b/catalog/view/theme/default/template/account/return_list.twig
@@ -1,7 +1,7 @@
 {{ header }}
       {{ column_left }}
 <div class="she-center col-sm-9 myorder-detail order-wrap j-order-conter j-order-detail" id="orders_new_right">
-  <h3 class="she-tl-h3">My Returns</h3>
+  <h3 class="she-tl-h3">{{ heading_title }}</h3>
   {#<p>Whatever you need, we’re here to help!</p>#}
   {#<div class="doubt">#}
     {#Simply submit a ticket on the Order Details page or in#}
