--- a/catalog/view/theme/default/template/account/transaction.twig
+++ b/catalog/view/theme/default/template/account/transaction.twig
@@ -1,14 +1,14 @@
 {{ header }}
     {{ column_left }}
     <div class="she-center col-sm-9 col-xs-12 per-wallet">
-      <h3 class="she-tl-h3">My Wallet</h3>
+      <h3 class="she-tl-h3">{{ heading_title }}</h3>
       <div class="wallet-balance">
         <div class="balance-title">
           <div class="title-image1">
             <span class="iconfont" style="font-size: 24px;"></span>
           </div>
           <div class="title-con1">
-            <p>Wallet Balance <a href="http://www.shein.com/About-My-Wallet-a-609.html" target="_top">What’s This?</a></p>
+            {#<p>Wallet Balance <a href="http://www.shein.com/About-My-Wallet-a-609.html" target="_top">What’s This?</a></p>#}
           </div>
         </div>
         <div class="blance-con-left col-sm-12">
