--- a/catalog/view/theme/default/template/account/wishlist.twig
+++ b/catalog/view/theme/default/template/account/wishlist.twig
@@ -4,7 +4,7 @@
       <div class="wish-list">
         <header style="border: medium none;">
           <div class="title">
-            <h3 class="she-tl-h3">My Wishlist</h3>
+            <h3 class="she-tl-h3">{{ heading_title }}</h3>
           </div>
         </header>
         <div class="wish-conter">
