--- a/catalog/view/theme/default/template/common/column_left.twig
+++ b/catalog/view/theme/default/template/common/column_left.twig
@@ -11,15 +11,15 @@
             <li> <a class="j-member-edit" href="index.php?route=account/edit">Account Setting </a> </li>
             <li> <a class="j-member-orders" href="index.php?route=account/order">My Orders</a> </li>
             <li> <a class="j-member-return" href="index.php?route=account/return">My Return</a> </li>
-            <li> <a class="ga-tk-list-my-tickets j-member-ticket " href=""> My Tickets <span id="ticket_menu_num" class="red_num"></span> </a> </li>
-            <li> <a class=" j-member-payment" href=""> My Payment Options </a> </li>
+            {#<li> <a class="ga-tk-list-my-tickets j-member-ticket " href=""> My Tickets <span id="ticket_menu_num" class="red_num"></span> </a> </li>#}
+            {#<li> <a class=" j-member-payment" href=""> My Payment Options </a> </li>#}
             <li> <a class=" j-member-wallet" href="index.php?route=account/transaction"> My Wallet </a> </li>
-            <li> <a class=" j-member-mymeasurement" href=""> My Measurements </a> </li>
-            <li> <a class=" j-member-shein" href=""> SheIn Membership</a> </li>
+            {#<li> <a class=" j-member-mymeasurement" href=""> My Measurements </a> </li>#}
+            {#<li> <a class=" j-member-shein" href=""> SheIn Membership</a> </li>#}
             <li> <a class=" j-member-address" href="index.php?route=account/address"> Address Book </a> </li>
             <li> <a class=" j-member-password" href="index.php?route=account/password"> Edit Password </a> </li>
-            <li> <a class=" j-member-styleGallery" href=""> Style Gallery </a> </li>
-            <li> <a class=" j-member-report" href=""> Free Trial Report </a> </li>
+            {#<li> <a class=" j-member-styleGallery" href=""> Style Gallery </a> </li>#}
+            {#<li> <a class=" j-member-report" href=""> Free Trial Report </a> </li>#}
             <li> <a class=" j-member-wishlist" href="index.php?route=account/wishlist"> My Wishlist </a> </li>
             <li> <a class=" j-member-reward" href="index.php?route=account/reward"> Reward </a> </li>
             <li> <a class=" j-member-newsletter" href="index.php?route=account/newsletter"> newsletter </a> </li>
