--- a/catalog/view/theme/default/template/account/account.twig
+++ b/catalog/view/theme/default/template/account/account.twig
@@ -1,7 +1,7 @@
 {{ header }}
     {{ column_left }}
     <div class="she-center col-sm-9 col-xs-12 peracc">
-      <h3 class="she-tl-h3">My ACCOUNT</h3>
+      <h3 class="she-tl-h3">{{ text_my_account }}</h3>
       <div class="list-wrap">
         <ul>
           <li class="list-item">
@@ -43,7 +43,7 @@
           <li class="list-item">
             <div class=" col-xs-6 peracc-left">
               <div class="title">
-                <h5 class="item-title"><a href="{{ edit }}"> Account Setting</a></h5>
+                <h5 class="item-title"><a href="{{ edit }}"> {{ text_edit }}</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Update your email address and we’ll serve you better in the future with personal shopping assistance.</p>
@@ -51,7 +51,7 @@
             </div>
             <div class="col-xs-6 peracc-right">
               <div class="title">
-                <h5 class="item-title"><a href="{{ order }}">My Orders</a></h5>
+                <h5 class="item-title"><a href="{{ order }}">{{ text_order }}</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">What you bought are all here, you can check them at anytime.</p>
@@ -61,7 +61,7 @@
           <li class="list-item">
             <div class=" col-xs-6 peracc-left">
               <div class="title">
-                <h5 class="item-title"><a href="{{ address }}">My Address Book</a></h5>
+                <h5 class="item-title"><a href="{{ address }}">{{ text_address }}</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Create and store shipping addresses for easy access any time you're signed in at SheIn.com.</p>
@@ -69,7 +69,7 @@
             </div>
             <div class="col-xs-6 peracc-right">
               <div class="title">
-                <h5 class="item-title"><a href="{{ password }}">Edit Password</a></h5>
+                <h5 class="item-title"><a href="{{ password }}">{{ text_password }}</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">To keep your account safe that you can edit your password, make it easy to be remembered! We recommend you do it and it won’t  take you long.</p>
@@ -79,7 +79,7 @@
           <li class="list-item">
             <div class=" col-xs-6 peracc-left">
               <div class="title">
-                <h5 class="item-title"><a href="#">Style Gallery</a></h5>
+                <h5 class="item-title"><a href="{{ return }}">{{ text_return }}</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Upload and share your looks with millions of SheIners.</p>
@@ -87,7 +87,7 @@
             </div>
             <div class="col-xs-6 peracc-right">
               <div class="title">
-                <h5 class="item-title"><a href="#">Free Trial Report</a></h5>
+                <h5 class="item-title"><a href="{{ transaction }}">{{ text_transaction }}</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Upload your free trial expericence.</p>
@@ -97,7 +97,7 @@
           <li class="list-item">
             <div class=" col-xs-6 peracc-left">
               <div class="title">
-                <h5 class="item-title"><a href="{{ wishlist }}">My Wishlist</a></h5>
+                <h5 class="item-title"><a href="{{ wishlist }}">{{ text_wishlist }}</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Keep tracking of what you want.</p>
@@ -105,7 +105,7 @@
             </div>
             <div class="col-xs-6 peracc-right">
               <div class="title">
-                <h5 class="item-title"><a href="#">Bonus Point Program</a></h5>
+                <h5 class="item-title"><a href="{{ reward }}">{{ text_reward }}</a></h5>
               </div>
               <div class="conter">
                 <p class="item-p">Share links to earn SheIn bonus points<br>
