--- a/catalog/view/theme/default/template/account/order_info.twig
+++ b/catalog/view/theme/default/template/account/order_info.twig
@@ -3,7 +3,7 @@
 
     <div class="she-center col-sm-9 myorder-detail order-wrap j-order-conter j-order-detail" style="padding-top:20px">
       <div class="detail-title">
-        <h3 class="title-left she-tl-h3">Order details</h3>
+        <h3 class="title-left she-tl-h3">{{ heading_title }}</h3>
         {#<p class="title-right"> <a href="#"> <i class="iconfont bk-icon" style="font-size: 12px; color: rgb(51, 51, 51);"></i>back </a> </p>#}
       </div>
       <div class="detail-con" id="order_info_YCB19086">
@@ -57,7 +57,7 @@
               <th>{{ column_quantity }}</th>
               <th>{{ column_price }}</th>
               <th>{{ column_total }}</th>
-              <th>操作</th>
+              <th></th>
             </tr>
             </thead>
             <tbody>
